--- a/FoodWeb/FoodWeb/Views/Products/Delete.cshtml
+++ b/FoodWeb/FoodWeb/Views/Products/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model FoodWeb.Models.Product
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "刪除便當";
 }
 
-<h1>Delete</h1>
+<h1>刪除便當</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>您確定是否要刪除？</h3>
 <div>
-    <h4>Product</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -39,7 +38,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="刪除" class="btn btn-danger" /> |
+        <a asp-action="Index">返回至 [上一頁]</a>
     </form>
 </div>
