--- a/FoodWeb/FoodWeb/Views/Products/Details.cshtml
+++ b/FoodWeb/FoodWeb/Views/Products/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model FoodWeb.Models.Product
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "詳細資訊";
 }
 
-<h1>Details</h1>
+<h1>便當詳細資訊</h1>
 
 <div>
-    <h4>Product</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -37,6 +36,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">編輯</a> |
+    <a asp-action="Index">返回至 [上一頁]</a>
 </div>
