--- a/FoodWeb/FoodWeb/Views/Products/Edit.cshtml
+++ b/FoodWeb/FoodWeb/Views/Products/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model FoodWeb.Models.Product
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "編輯";
 }
 
-<h1>Edit</h1>
+<h1>編輯便當</h1>
 
-<h4>Product</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,14 +33,14 @@
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="儲存" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">返回至 [上一頁]</a>
 </div>
 
 @section Scripts {
