--- a/FoodWeb/FoodWeb/Views/Products/Index.cshtml
+++ b/FoodWeb/FoodWeb/Views/Products/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<FoodWeb.Models.Product>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "首頁";
 }
 
-<h1>Index</h1>
+<h1>商品清單</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">新增商品</a>
 </p>
 <table class="table">
     <thead>
@@ -43,9 +43,9 @@
                 @Html.DisplayFor(modelItem => item.ImageUrl)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">編輯</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">詳細資訊</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">刪除</a>
             </td>
         </tr>
 }
