--- a/FoodWeb/FoodWeb/Views/Products/Create.cshtml
+++ b/FoodWeb/FoodWeb/Views/Products/Create.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form method="post" asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -28,8 +28,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ImageUrl" class="control-label"></label>
-                <input asp-for="ImageUrl" class="form-control" />
-                <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                <input type="file" accept=".jpg,.jpgs,.png" id="uploadBox" name="file" class="form-control">
             </div>
             <div class="form-group">
                 <input type="submit" value="新增" class="btn btn-primary" />
