--- a/FoodWeb/FoodWeb/Views/Products/Index.cshtml
+++ b/FoodWeb/FoodWeb/Views/Products/Index.cshtml
@@ -3,7 +3,14 @@
 @{
     ViewData["Title"] = "首頁";
 }
-
+<style>
+    .image {
+        height: 80px;
+        width: 80px;
+        border-radius:5px;
+        border: 1px solid #bbb9b9;
+    }
+</style>
 <h1>商品清單</h1>
 
 <p>
@@ -40,7 +47,7 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImageUrl)
+                <img src="@Html.DisplayFor(modelItem => item.ImageUrl)" class="image"/>
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">編輯</a> |
