--- a/FoodWeb/FoodWeb/Views/Products/Details.cshtml
+++ b/FoodWeb/FoodWeb/Views/Products/Details.cshtml
@@ -31,7 +31,7 @@
             @Html.DisplayNameFor(model => model.ImageUrl)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
+            <img src="@Model.ImageUrl" class="image"/>
         </dd>
     </dl>
 </div>
