--- a/FoodWeb/FoodWeb/Views/Products/Delete.cshtml
+++ b/FoodWeb/FoodWeb/Views/Products/Delete.cshtml
@@ -32,13 +32,13 @@
             @Html.DisplayNameFor(model => model.ImageUrl)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
+            <img src="@Model.ImageUrl" class="image"/>
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="刪除" class="btn btn-danger" /> |
+        <input type="submit" value="刪除" class="btn btn-danger" onclick="return confirm('確定要刪除？')"/> |
         <a asp-action="Index">返回至 [上一頁]</a>
     </form>
 </div>
